
TinyONE ChangeLog

= 28.12.2022
   * Reworked TOTP functionality. 
     Added own check function, WebUserCheckUserPasswordTOTP.

= 27.12.2022
   * Added support for two-factor authentication using TOTP.
   * Added support for password reset. In case a password should be reseted,
     a password reset request code will be generated by the TinyONE server.
     The format of the request code looks like: 1122-3344-5566-7788
     The reset code is now generated with this request code and your secret
     algorithm. The current "secret" algorithm uses the reset request code in
     reverse order. That mean that for the request code 1122-3344-5566-7788
     the reset code looks like 8877665544332211. You must implement your own
     secret algorithm in function CreateResetCodeByRequest (web_user.c).

= 21.12.2022
   * ELCA: Added functionality to automatically request a certificate from
     a TinyELCA server if needed.

= 19.12.2022
   * SES v7.10a used.
   * Corrected some file headers.
   * Added functionality to get link speed and mode, IP_IF_LinkSpeedDuplexGet.
   * Some changes to support more than one network interfaces. 
   * Added login dummy in case no login is required (IP_WEB_SID_SUPPORT = 0).
   * Added interrupt protection in memory management.
   * Change statistic task priority from 2 to 254.
   * Removed OS_SemaSignalNoSched, OS_SemaBroadcastAsync and OS_SemaBroadcast.

= 17.12.2022
   * New mbedTLS, v2.28.2, used.

= 24.07.2022
   * New mbedTLS, v2.28.1, used.
   
= 15.05.2022
   * New mbedTLS, v2.28.0, used.
   
= Version 1.10 / 1.10, 25.08.2021
   * First version for GitHub.