@@ -132,7 +132,7 @@
           <div class="navi3">
             <ul>
               <li class="nb"><a class="active" href="#">Change password</a></li>
-              <li class="ne"><a href="sectotp.htm">Enable TOTP</a></li>
+              <li class="ne"><a href="sectotp.htm">Manage TOTP</a></li>
             </ul>
           </div>
 
